--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -13,16 +13,8 @@
 
 :root {
   --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: -webkit-linear-gradient(
-    120deg,
-    hsl(128, 56%, 38%) 30%,
-    hsl(128, 56%, 60%)
-  );
-  --vp-home-hero-image-background-image: linear-gradient(
-    120deg,
-    hsl(100, 56%, 45%) 30%,
-    hsl(120, 56%, 38%)
-  );
+  --vp-home-hero-name-background: -webkit-linear-gradient(120deg, hsl(128, 56%, 38%) 30%, hsl(128, 56%, 60%));
+  --vp-home-hero-image-background-image: linear-gradient(120deg, hsl(100, 56%, 45%) 30%, hsl(120, 56%, 38%));
   --vp-home-hero-image-filter: blur(40px);
 }
 @media (min-width: 640px) {
